--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -1,9 +1,9 @@
 [Details]
-Icon = "metadata/en-US/images/icon.png"
-Name = "croc"
-ID = "com.github.howeyc.crocgui"
-Version = "1.11.7"
-Build = 42
+  Icon = "metadata/en-US/images/icon.png"
+  Name = "crocgui"
+  ID = "com.github.howeyc.crocgui"
+  Version = "10.3.1"
+  Build = 43
 
 [Migrations]
-fyneDo = false
+  fyneDo = false
